--- a/beijing/pages/选中文本截图/index.html
+++ b/beijing/pages/选中文本截图/index.html
@@ -530,6 +530,7 @@ function convertCanvasToImage(canvas) {
 	image.src = globalcanvas.toDataURL("image/png");
   console.log('image ====', image)
   imgBox.appendChild(image)
+  dataURLtoFile(image.src)
 }
 
 /**
@@ -623,6 +624,20 @@ function closeDialog () {
   setStyle(`.canvas-edit-box{display: none;}`)
   document.body.style.overflow='auto'
 }
+
+/**
+ * 将base64转成file
+ */ 
+function dataURLtoFile(dataurl) {
+  var filename = `screenshot_${new Date().getTime()}.png`
+  var arr = dataurl.split(','), mime = arr[0].match(/:(.*?);/)[1],
+  bstr = atob(arr[1]), n = bstr.length, u8arr = new Uint8Array(n);
+  while(n--){
+    u8arr[n] = bstr.charCodeAt(n);
+  }
+  var file = new File([u8arr], filename, {type:mime});
+  console.log('file ============ ', file)
+ }
 
 </script>
 </html>
