--- a/beijing/pages/选中文本截图/index.html
+++ b/beijing/pages/选中文本截图/index.html
@@ -96,6 +96,7 @@
         关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
         架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
       </p>
+      <img src="https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2144684161/p85840.png">
       <p>
         在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
         从定义中我们提炼出几个关键字：组件、结构、关系；
@@ -118,195 +119,7 @@
       <p>
         架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
       </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <p>
-        架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-      </p>
-      <div>
-        <p>
-          在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
-          从定义中我们提炼出几个关键字：组件、结构、关系；
-          组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
-          结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
-          关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
-          从定义中我们提炼出几个关键字：组件、结构、关系；
-          组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
-          结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
-          关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
-          从定义中我们提炼出几个关键字：组件、结构、关系；
-          组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
-          结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
-          关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-      </div>
-      <div>
-        <p>
-          在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
-          从定义中我们提炼出几个关键字：组件、结构、关系；
-          组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
-          结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
-          关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
-          从定义中我们提炼出几个关键字：组件、结构、关系；
-          组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
-          结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
-          关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          在了解架构本质之前先了解下架构的定义，百度百科对架构的定义：架构又名软件架构，是有关软件整体结构与组件的抽象描述，用于指导大型软件系统各个方面的设计 ；
-          从定义中我们提炼出几个关键字：组件、结构、关系；
-          组件：也可以称为软件元素或者是架构要素。可以是子系统、模块、应用服务，取决于不同粒度来看待。
-          结构：是架构之后的产出物，不同的软件系统会有不同结构，这些结构是为解决不同场景而设计。
-          关系：实现架构组件之间的连接。连接关系可以是JVM内部调用、可以是组件之间、也可以是跨应用的分布式调用、也可以与外系统接口集成调用。
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
-        <p>
-          架构可以理解为是将软件组件按照一定结构进行连接起来 ；软件组件
-        </p>
+      
       </div>
     </div>
     
@@ -488,7 +301,7 @@ function showTip(txt,target,position){
  * html2canvas 生成页面截图
  */
 function getCanvasFromHtml(){
-  html2canvas(document.body).then(function(canvas) {
+  html2canvas(document.body, {allowTaint:true}).then(function(canvas) {
     globalcanvas = canvas
     canvasBox.appendChild(canvas)
     ctx = globalcanvas.getContext("2d");
